--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "investfund",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
-    "dev:backend": "npx nodemon server/server.js",
+    "dev:backend": "npx nodemon lab_7_arch/index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
